Update dependencies, clean and refactor some code